--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -645,5 +645,8 @@
   "purchase_title_recharge_usdt_hyn": "하이브리드 직접 청구 USDT + HYN 잔액 사용",
   "purchase_title_recharge_only_hyn": "직접 충전 HYN 저울 사용",
   "purchase_title_recharge_func": "사용 가능한 잔액 HYN 등액 ${hyn}, USDT 직접 충전 ${usdt}",
-  "purchase_title_input_func": "사용 가능한 잔액 HYN 등액 ${hyn}"
+  "purchase_title_input_func": "사용 가능한 잔액 HYN 등액 ${hyn}",
+  "my_hash_free_contract": "무료 계약",
+  "my_hash_gift_contract": "선물 계약",
+  "my_hash_home_economic_contract": "가정 경제 계약"
 }
