--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -648,5 +648,6 @@
   "purchase_title_input_func": "(我的余额HYN等额 ${balance}U)",
   "my_hash_free_contract": "免费合约",
   "my_hash_gift_contract": "赠送合约",
-  "my_hash_home_economic_contract": "宅经济合约"
+  "my_hash_home_economic_contract": "宅经济合约",
+  "hashrate_contract": "算力合约"
 }
