--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -650,5 +650,7 @@
   "my_hash_gift_contract": "赠送合约",
   "my_hash_home_economic_contract": "宅经济合约",
   "buy_need_hyn_only_func": "(需：HYN等额 ${hyn}U)",
-  "hashrate_contract": "算力合约"
+  "hashrate_contract": "算力合约",
+  "purchase_title_recharge_only_usdt": "使用直充USDT余额",
+  "buy_need_usdt_only_func": "(需：USDT ${usdt}U)"
 }
