--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -261,7 +261,7 @@
   "n_days_product": "${days} day produce",
   "power_martgage": "Get HashRate",
   "product": "Product：",
-  "amount": "Amount：",
+  "amount": "Price：",
   "amount_copy_success_hint": "Amount copied successfully",
   "please_mortgage": "Please stake",
   "becharge_amount": "Top-up balane",
@@ -652,5 +652,6 @@
   "buy_need_hyn_only_func": "(USDT Deposit：from HYN ${hyn}U)",
   "hashrate_contract": "HashRate contract",
   "purchase_title_recharge_only_usdt": "By direct charge USDT ",
-  "buy_need_usdt_only_func": "(Deposit：from USDT ${usdt}U)"
+  "buy_need_usdt_only_func": "(Deposit：from USDT ${usdt}U)",
+  "quantity_func": "${number}"
 }
