--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -261,7 +261,7 @@
   "n_days_product": "${days}일산출",
   "power_martgage": "계산력저당",
   "product": "제품",
-  "amount": "금액",
+  "amount": "가격：",
   "amount_copy_success_hint": "금액복사성공",
   "please_mortgage": "저당을 설정하여 주십시요",
   "becharge_amount": "충전 잔액",
@@ -652,5 +652,6 @@
   "buy_need_hyn_only_func": "(HYN등액 ${hyn})",
   "hashrate_contract": "계산력 계약",
   "purchase_title_recharge_only_usdt": "직접 충전 USDT 저울 사용",
-  "buy_need_usdt_only_func": "(USDT ${usdt})"
+  "buy_need_usdt_only_func": "(USDT ${usdt})",
+  "quantity_func": "${number}"
 }
