--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -398,5 +398,6 @@
   "source_desc_title": "Data source desc",
   "epidemic_map_short": "NCP MAP",
   "search_failed": "搜索异常",
-  "cannot_get_your_location": "获取不到你当前位置"
+  "cannot_get_your_location": "获取不到你当前位置",
+  "wait_min": "${min} 分钟"
 }
