--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -398,5 +398,6 @@
   "source_desc_title": "数据源说明",
   "epidemic_map_short": "新冠病毒地图",
   "search_failed": "搜索异常",
-  "cannot_get_your_location": "获取不到你当前位置"
+  "cannot_get_your_location": "获取不到你当前位置",
+  "wait_min": "${min} 分钟"
 }
