[Add] add map3 contract

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -240,7 +240,7 @@
   "audio": "Audio",
   "domestic_video": "Domestic",
   "foreign_video": "Foreign",
-  "titan_encrypted_map_ecology": "Titan Cryptographic Map Ecology",
+  "titan_encrypted_map_ecology": "Cryptographic Map Ecology",
   "share_app": "Share App",
   "dapp_setting": "DApp Settings",
   "private_share": "Private location Share",
