--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -240,7 +240,7 @@
   "audio": "오디오",
   "domestic_video": "국내동영상",
   "foreign_video": "국외동영상",
-  "titan_encrypted_map_ecology": "Titan 암호화지도생태학",
+  "titan_encrypted_map_ecology": "암호화지도생태학",
   "share_app": "app공유",
   "dapp_setting": "DApp설정",
   "private_share": "프리이버시공유",
