--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -240,7 +240,7 @@
   "audio": "音频",
   "domestic_video": "国内视频",
   "foreign_video": "国外视频",
-  "titan_encrypted_map_ecology": "Titan 加密地图生态",
+  "titan_encrypted_map_ecology": "加密地图生态",
   "share_app": "分享app",
   "dapp_setting": "DApp设置",
   "private_share": "私密分享",
