--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -659,5 +659,12 @@
   "daily_bills_type_income": "收益账单",
   "daily_bills_type_node": "节点账单",
   "daily_bills_type_buycontract": "入金/复购账单",
-  "daily_bills_type_all": "总账单"
+  "daily_bills_type_all": "总账单",
+  "contract_record": "合约账单",
+  "all_bills": "总账单",
+  "contract_bills": "合约账单",
+  "node_bills": "节点账单",
+  "reward_bills": "奖励账单",
+  "recharge_withdrawal_bills": "充值提币账单",
+  "my_account": "我的账户"
 }
