--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -660,7 +660,7 @@
   "daily_bills_type_node": "노드",
   "daily_bills_type_buycontract": "계약",
   "daily_bills_type_all": "총 청구서",
-  "contract_record": "계약 기록",
+  "contract_record": "빌",
   "all_bills": "모두",
   "contract_bills": "계약",
   "node_bills": "마디",
