--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -660,7 +660,7 @@
   "daily_bills_type_node": "节点账单",
   "daily_bills_type_buycontract": "入金/复购账单",
   "daily_bills_type_all": "总账单",
-  "contract_record": "合约账单",
+  "contract_record": "账单",
   "all_bills": "总账单",
   "contract_bills": "合约账单",
   "node_bills": "节点账单",
