map3 contract call sign move to wallet.

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -111,7 +111,7 @@
   "hyn_price": "HYN Price",
   "online_exchange": "Online Exchanges",
   "rmb": "CNY",
-  "map3_node_introduction": "Mp3 Node",
+  "map3_node_introduction": "Map3",
   "private_and_safety": "Private and Secure",
   "create_wallet": "Create Wallet",
   "import_wallet": "Import Wallet",
