--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -399,15 +399,15 @@
   "epidemic_map_short": "NCP MAP",
   "search_failed": "搜索异常",
   "cannot_get_your_location": "获取不到你当前位置",
-  "wait_min": "${min} 分钟",
-  "global_data": "全球数据",
-  "global_data_map3": "Map3节点",
-  "global_data_signal": "信号数据",
-  "global_data_poi": "POI数据",
-  "signal_chart_desc_map3": "''Map3节点网络启用全新的空间数据模型，旨在大规模、高性能及低成本地将基础设施提升1000倍。Map3是由One Map算法技术支撑的去中心化地图/位置服务PaaS, 旨在支持构建Map3去中心化节点的大型网络。''",
-  "signal_chart_desc_signal": "''信号数据将有效提升去中心化地图的定位精准度，只要有GPS，蓝牙，基站或WIFI信号的地区就能提供有效的应急救援、精准导航等定位功能，适用于户外徒步或探险等多场景应用。''",
-  "signal_chart_desc_poi": "''POI贡献基于众包、众治的去中心化理念，以去中心化的最有效方式鼓励用户贡献真实详细的位置详情。为避免POI信息有误，同时推出博弈系统配合网络验证，开放给所有地图用户查验POI数据真实性。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
-  "signal_chart_last_month_numbers_func": "最近一个月${scanName}数据增量：",
-  "signal_total_data": "信号数据总量：",
-  "poi_total_data": "POI数据分布："
+  "wait_min": "${min} min",
+  "global_data": "Global Data",
+  "global_data_map3": "Map3 node",
+  "global_data_signal": "Signal Data",
+  "global_data_poi": "POI data",
+  "signal_chart_desc_map3": "'' The Map3 node network enables a brand-new spatial data model, which aims to increase the infrastructure by 1000 times on a large scale, high performance and low cost. Map3 is a decentralized map / location supported by One Map algorithm technology Service PaaS, designed to support the construction of a large network of Map3 decentralized nodes. ''",
+  "signal_chart_desc_signal": "'' Signal data will effectively improve the positioning accuracy of decentralized maps, as long as there are GPS, Bluetooth, base station or WIFI signal areas, it can provide effective emergency rescue, precise navigation and other positioning functions, suitable for outdoor Multi-scenario applications such as hiking or adventure. ''",
+  "signal_chart_desc_poi": "'' POI contribution is based on the concept of decentralization of crowdsourcing and public governance. In the most effective way of decentralization, users are encouraged to contribute real and detailed location details. To avoid errors in POI information, the game system is launched Network verification, open to all map users to check the authenticity of POI data. In the future, if you want to search for nearby delicious and fun destinations, just enter keywords on the App home page, such as food, hotels, shopping malls, attractions, etc., you can view the location Click for details. ''",
+  "signal_chart_last_month_numbers_func": "Increment of ${scanName} data in the last month:",
+  "signal_total_data": "Total signal data:",
+  "poi_total_data": "POI data distribution:"
 }
