--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -400,14 +400,14 @@
   "search_failed": "搜索異常",
   "cannot_get_your_location": "獲取不到妳當前位置",
   "wait_min": "${min} 分鐘",
-  "global_data": "全球数据",
-  "global_data_map3": "Map3节点",
-  "global_data_signal": "信号数据",
-  "global_data_poi": "POI数据",
-  "signal_chart_desc_map3": "''Map3节点网络启用全新的空间数据模型，旨在大规模、高性能及低成本地将基础设施提升1000倍。Map3是由One Map算法技术支撑的去中心化地图/位置服务PaaS, 旨在支持构建Map3去中心化节点的大型网络。''",
-  "signal_chart_desc_signal": "''信号数据将有效提升去中心化地图的定位精准度，只要有GPS，蓝牙，基站或WIFI信号的地区就能提供有效的应急救援、精准导航等定位功能，适用于户外徒步或探险等多场景应用。''",
-  "signal_chart_desc_poi": "''POI贡献基于众包、众治的去中心化理念，以去中心化的最有效方式鼓励用户贡献真实详细的位置详情。为避免POI信息有误，同时推出博弈系统配合网络验证，开放给所有地图用户查验POI数据真实性。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
-  "signal_chart_last_month_numbers_func": "最近一个月${scanName}数据增量：",
-  "signal_total_data": "信号数据总量：",
-  "poi_total_data": "POI数据分布："
+  "global_data": "全球數據",
+  "global_data_map3": "Map3節點",
+  "global_data_signal": "信號數據",
+  "global_data_poi": "POI數據",
+  "signal_chart_desc_map3": "''Map3節點網絡啟用全新的空間數據模型，旨在大規模、高性能及低成本地將基礎設施提升1000倍。Map3是由One Map算法技術支撐的去中心化地圖/位置服務PaaS, 旨在支持構建Map3去中心化節點的大型網絡。''",
+  "signal_chart_desc_signal": "''信號數據將有效提升去中心化地圖的定位精準度，只要有GPS，藍牙，基站或WIFI信號的地區就能提供有效的應急救援、精準導航等定位功能，適用於戶外徒步或探險等多場景應用。''",
+  "signal_chart_desc_poi": "''POI貢獻基於眾包、眾治的去中心化理念，以去中心化的最有效方式鼓勵用戶貢獻真實詳細的位置詳情。為避免POI信息有誤，同時推出博弈系統配合網絡驗證，開放給所有地圖用戶查驗POI數據真實性。未來想要搜索附近好吃好玩的目的地，只需在App首頁輸入關鍵字，如美食、酒店、商場、景點等，即可查看該位置點詳情。''",
+  "signal_chart_last_month_numbers_func": "最近壹個月${scanName}數據增量：",
+  "signal_total_data": "信號數據總量：",
+  "poi_total_data": "POI數據分布："
 }
