add api language

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -111,7 +111,7 @@
   "hyn_price": "HYN 지수",
   "online_exchange": "온라인 거래소",
   "rmb": "인민페",
-  "map3_node_introduction": "MAP3",
+  "map3_node_introduction": "Map3",
   "private_and_safety": "프라이버시와 안전",
   "create_wallet": "지갑 새로 만들기",
   "import_wallet": "지갑 가져오기",
