--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -111,7 +111,7 @@
   "hyn_price": "HYN指数",
   "online_exchange": "上线交易所",
   "rmb": "人民币",
-  "map3_node_introduction": "MAP3",
+  "map3_node_introduction": "Map3",
   "private_and_safety": "私密和安全",
   "create_wallet": "创建钱包",
   "import_wallet": "导入钱包",
