--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -409,5 +409,14 @@
   "signal_chart_desc_poi": "'' POI contribution is based on the concept of decentralization of crowdsourcing and public governance. In the most effective way of decentralization, users are encouraged to contribute real and detailed location details. To avoid errors in POI information, the game system is launched Network verification, open to all map users to check the authenticity of POI data. In the future, if you want to search for nearby delicious and fun destinations, just enter keywords on the App home page, such as food, hotels, shopping malls, attractions, etc., you can view the location Click for details. ''",
   "signal_chart_last_month_numbers_func": "Increment of ${scanName} data in the last month:",
   "signal_total_data": "Total signal data:",
-  "poi_total_data": "POI data distribution:"
+  "poi_total_data": "POI data distribution:",
+  "wait_start_node_contract": "等待启动的节点抵押合约",
+  "earth_outpace_server_node": "全球超过%d个地球服务站点",
+  "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
+  "create_contract": "创建合约",
+  "remain_day": "剩余：%s天",
+  "highest": "最高",
+  "annualized_rewards": "年化奖励",
+  "remain": "还差",
+  "join": "参与"
 }
