--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -409,5 +409,14 @@
   "signal_chart_desc_poi": " ''POI 기여는 크라우드 소싱 및 공공 거버넌스의 탈 중앙화 개념을 기반으로합니다. 가장 효과적인 탈 중앙화 방법으로 사용자는 실제적이고 자세한 위치 세부 정보를 제공 할 수 있습니다. POI 정보의 오류를 피하기 위해 게임 시스템이 시작됩니다 네트워크 확인, 모든지도 사용자에게 열려 POI 데이터의 진위 여부 확인 향후 맛있고 재미있는 목적지를 검색하려면 앱 홈 페이지에서 음식, 호텔, 쇼핑몰, 관광 명소 등과 같은 키워드를 입력하면 위치를 볼 수 있습니다 자세한 내용을 보려면 클릭하십시오 ''",
   "signal_chart_last_month_numbers_func": "가장 최근 달에 ${scanName} 데이터 증가 :",
   "signal_total_data": "총 신호 데이터 :",
-  "poi_total_data": "POI 데이터 배포 :"
+  "poi_total_data": "POI 데이터 배포 :",
+  "wait_start_node_contract": "等待启动的节点抵押合约",
+  "earth_outpace_server_node": "全球超过%d个地球服务站点",
+  "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
+  "create_contract": "创建合约",
+  "remain_day": "剩余：%s天",
+  "highest": "最高",
+  "annualized_rewards": "年化奖励",
+  "remain": "还差",
+  "join": "参与"
 }
