--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -409,5 +409,14 @@
   "signal_chart_desc_poi": "''POI贡献基于众包、众治的去中心化理念，以去中心化的最有效方式鼓励用户贡献真实详细的位置详情。为避免POI信息有误，同时推出博弈系统配合网络验证，开放给所有地图用户查验POI数据真实性。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
   "signal_chart_last_month_numbers_func": "最近一个月${scanName}数据增量：",
   "signal_total_data": "信号数据总量：",
-  "poi_total_data": "POI数据分布："
+  "poi_total_data": "POI数据分布：",
+  "wait_start_node_contract": "等待启动的节点抵押合约",
+  "earth_outpace_server_node": "全球超过%d个地球服务站点",
+  "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
+  "create_contract": "创建合约",
+  "remain_day": "剩余：%s天",
+  "highest": "最高",
+  "annualized_rewards": "年化奖励",
+  "remain": "还差",
+  "join": "参与"
 }
