--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -409,5 +409,14 @@
   "signal_chart_desc_poi": "''POI貢獻基於眾包、眾治的去中心化理念，以去中心化的最有效方式鼓勵用戶貢獻真實詳細的位置詳情。為避免POI信息有誤，同時推出博弈系統配合網絡驗證，開放給所有地圖用戶查驗POI數據真實性。未來想要搜索附近好吃好玩的目的地，只需在App首頁輸入關鍵字，如美食、酒店、商場、景點等，即可查看該位置點詳情。''",
   "signal_chart_last_month_numbers_func": "最近壹個月${scanName}數據增量：",
   "signal_total_data": "信號數據總量：",
-  "poi_total_data": "POI數據分布："
+  "poi_total_data": "POI數據分布：",
+  "wait_start_node_contract": "等待启动的节点抵押合约",
+  "earth_outpace_server_node": "全球超过%d个地球服务站点",
+  "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
+  "create_contract": "创建合约",
+  "remain_day": "剩余：%s天",
+  "highest": "最高",
+  "annualized_rewards": "年化奖励",
+  "remain": "还差",
+  "join": "参与"
 }
