--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -458,5 +458,6 @@
   "total_member_count": "共：$memberCount（人）",
   "invite_friend_join": "邀请好友\n参加",
   "sponsor": "发起人",
-  "node_mortgage_contract": "Map3节点抵押合约"
+  "node_mortgage_contract": "Map3节点抵押合约",
+  "please_input_hyn_count": "请输入HYN数量"
 }
