add map3 node translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -414,7 +414,6 @@
   "earth_outpace_server_node": "全球超过%d个地球服务站点",
   "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
   "create_contract": "创建合约",
-  "remain_day": "剩余：%s天",
   "highest": "最高",
   "annualized_rewards": "年化奖励",
   "remain": "还差",
@@ -459,5 +458,47 @@
   "invite_friend_join": "邀请好友\n参加",
   "sponsor": "发起人",
   "node_mortgage_contract": "Map3节点抵押合约",
-  "please_input_hyn_count": "请输入HYN数量"
+  "please_input_hyn_count": "请输入HYN数量",
+  "broadcase_success": "广播成功",
+  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
+  "create": "创建",
+  "map_node_contract_address": "Map3节点合约(${receiverAddress})",
+  "launch": "发起",
+  "remain_day_has_colon": "剩余：${remain}天",
+  "remain_day": "剩余${remain}天",
+  "can_extract": "可提取",
+  "be_expired": "已到期",
+  "overdue_start_failed": "超期启动失败",
+  "view_contract": "查看合约",
+  "node_in_configuration": "节点配置中",
+  "wait_block_chain_verification": "正在创建中，等待区块链网络验证",
+  "increase_investment": "增加投入",
+  "mortgaged": "已抵押",
+  "node_is_running": "节点正在运行中。。。",
+  "extract": "提取",
+  "node_revenue_extracted": "节点收益已经提取完成。",
+  "withdraw_fifty_revenue": "提取50%收益",
+  "node_half_revenue_had_withdraw": "节点一半的收益已经提取完成。",
+  "node_return_had_withdraw_finish": "节点退款已经提取完成。",
+  "node_wait_to_launch": "节点待启动",
+  "wait_to_launch": "等待启动",
+  "node_in_progress": "节点进行中",
+  "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
+  "launch_success": "启动成功",
+  "node_had_stop": "节点已停止",
+  "expired_can_withdraw_rewards": "已到期,可提全部奖励",
+  "launch_fail_request_refund": "启动失败，请申请退款",
+  "launch_fail": "启动失败",
+  "recovered_invested_capital": "已取回投入资金",
+  "earned_rewards": "已获取奖励",
+  "congratulation_reward_withdrawn": "恭喜，已提取奖励",
+  "map_node_detail": "Map3节点详情",
+  "click_view_detail": "点击查看详情",
+  "you_have_invested_hyn": "你已投入(HYN)",
+  "expected_output_hyn": "预期产出(HYN)",
+  "create_time": "创建时间",
+  "can_withdraw_fifty_reward": "可提50%奖励",
+  "expire_date": "到期时间",
+  "extract_time": "提取时间",
+  "extracting": "提取中..."
 }
