add map3 node translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -500,5 +500,32 @@
   "can_withdraw_fifty_reward": "可提50%奖励",
   "expire_date": "到期时间",
   "extract_time": "提取时间",
-  "extracting": "提取中..."
+  "extracting": "提取中...",
+  "exceed_the_limit": "超过限制",
+  "fund_password_error": "资金密码错误",
+  "param_error": "参数错误",
+  "unauthorized": "未授权",
+  "insufficient_permission": "权限不足",
+  "content_confict": "内容冲突",
+  "no_content": "无内容",
+  "network_error": "网络错误",
+  "create_account_fail": "创建用户失败",
+  "account_exist_direct_login": "账号已存在，请直接登录账号",
+  "update_user_info_fail": "更新用户信息失败",
+  "verification_code_error": "验证码错误",
+  "invitation_code_error": "邀请码错误",
+  "username_and_password_not_match": "用户名和密码不匹配",
+  "password_reset_error": "重置密码错误",
+  "punch_card_completed_came_tomorrow": "今天打卡任务已完成，请明日再来",
+  "check_interval_less_thirty_minutes": "打卡间隔低于30分钟",
+  "no_more_data": "没有更多数据了~",
+  "load_failed_click_retry": "加载失败，点击重试",
+  "price_show": "价格显示",
+  "my_initiated_map_contract": "我发起的Map3合约",
+  "please_create_import_wallet": "请创建/导入钱包",
+  "my_join_map_contract": "我参与的Map3合约",
+  "wallet_account": "钱包账户",
+  "create_map_node_must_have_block_account": "创建Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
+  "undefind_error": "未定义错误",
+  "ten_thousand": "万"
 }
