--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -426,7 +426,8 @@
   "contract_create_cant_destroy": "·  Map3节点抵押合约创建后不可撤销。",
   "freeze_balance_reward_direct_push": "·  创建节点需要暂时冻结500U账户余额，用于支付直推人的贡献奖励。直推人及奖励收取节点总收益的5%。",
   "confirm_bug": "确定买入",
-  "mortgage_wallet_balance": "抵押HYN数量  （${walletName}钱包HYN余额 $balance）",
+  "mortgage_hyn_num": "抵押HYN数量",
+  "mortgage_wallet_balance": "（${walletName}钱包HYN余额 $balance）",
   "mintotal_buy": "最低买入$minTotal",
   "mintotal_hyn": "不能少于${minTotal}HYN",
   "hyn_balance_no_enough": "HYN余额不足",
@@ -456,7 +457,7 @@
   "part_member": "参与成员",
   "invite_friend_join": "邀请好友\n参加",
   "sponsor": "发起人",
-  "node_mortgage_contract": "Map3节点抵押合约",
+  "node_mortgage_contract": "Map3节点合约",
   "please_input_hyn_count": "请输入HYN数量",
   "broadcase_success": "广播成功",
   "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
