--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -518,7 +518,7 @@
   "password_reset_error": "重置密码错误",
   "punch_card_completed_came_tomorrow": "今天打卡任务已完成，请明日再来",
   "check_interval_less_thirty_minutes": "打卡间隔低于30分钟",
-  "no_more_data": "没有更多数据了~",
+  "no_more_data": "—— 这是地平线了 ——",
   "load_failed_click_retry": "加载失败，点击重试",
   "price_show": "价格显示",
   "my_initiated_map_contract": "我发起的Map3合约",
