--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -551,5 +551,6 @@
   "manager_tip_hyn": "管理费(HYN)",
   "withdrawRefund": "申请退款",
   "contract_had_stop": "合约已结束",
-  "contract_had_expired": "合约已到期"
+  "contract_had_expired": "合约已到期",
+  "create_contract_only_one_hint": "• 一个钱包有且只能创建一个Map3节点抵押合约。"
 }
