--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -482,7 +482,7 @@
   "node_half_revenue_had_withdraw": "节点一半的收益已经提取完成。",
   "node_return_had_withdraw_finish": "节点退款已经提取完成。",
   "node_wait_to_launch": "节点待启动",
-  "wait_to_launch": "等待启动",
+  "wait_to_launch": "合约等待启动",
   "node_in_progress": "节点进行中",
   "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
   "launch_success": "启动成功",
@@ -552,6 +552,6 @@
   "withdrawRefund": "申请退款",
   "contract_had_stop": "合约已结束",
   "contract_had_expired": "合约已到期",
-  "create_contract_only_one_hint": "• 一个钱包有且只能创建一个Map3节点抵押合约。合约到期后可再创建一个。",
+  "create_contract_only_one_hint": "• 一个钱包地址同一时间内只能创建一个Map3节点合约。合约到期后可再创建一个。",
   "contract_running": "合约运行中"
 }
