--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -563,5 +563,10 @@
   "input_confirm_fail": "转入失败",
   "output_confirm_fail": "提取失败",
   "input_confirm_success": "已转入",
-  "output_confirm_success": "已提取"
+  "output_confirm_success": "已提取",
+  "task_pending": "待处理中",
+  "task_finished": "处理完成",
+  "your_last_input_to_contract_func": "你的最新抵押：${input}, ${S.of(context).task_pending}",
+  "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
+  "happy_get_all_reward_hint": "恭喜你成功提取所有奖励"
 }
