--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -454,8 +454,8 @@
   "invest_cant_undo": "·  投入Map3节点后不可撤销。",
   "account_flow": "合约流水",
   "total": "总额",
-  "part_member": "参与成员",
-  "total_member_count": "共：$memberCount（人）",
+  "part_member": "参与地址",
+  "total_member_count": "共：$memberCount（个）",
   "invite_friend_join": "邀请好友\n参加",
   "sponsor": "发起人",
   "node_mortgage_contract": "Map3节点合约",
