--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -434,8 +434,8 @@
   "balance_portion_hyn": "剩余份额(HYN)：",
   "all_bug": "全部买入",
   "end_profit_hyn": "期满共产生(HYN)：",
-  "spend_manager_hyn": "另应付管理费(HYN)：",
-  "get_manager_hyn": "另获得管理费(HYN)：",
+  "spend_manager_hyn": "另付管理费(HYN)：",
+  "get_manager_hyn": "另获管理费(HYN)：",
   "node_contract_detail": "节点抵押合约详情",
   "join_map_node_mortgage": "参与Map3节点抵押",
   "create_map_mortgage_contract": "创建Map3抵押合约",
@@ -454,7 +454,8 @@
   "invest_cant_undo": "•  投入Map3节点后不可撤销。",
   "account_flow": "合约流水",
   "total": "总额",
-  "part_member": "参与成员",
+  "part_member": "参与地址",
+  "total_member_count": "共：$memberCount（个）",
   "invite_friend_join": "邀请好友\n参加",
   "sponsor": "发起人",
   "node_mortgage_contract": "Map3节点合约",
@@ -556,7 +557,7 @@
   "contract_running": "合约运行中",
   "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
-  "get_manage_tip_hyn": "获得管理费(HYN)",
+  "get_manage_tip_hyn": "另获管理费(HYN)",
   "out_mange_tip_hyn": "支出管理费(HYN)",
   "input_confirm_pending": "转入待确认中",
   "output_confirm_pending": "提取待确认中",
