--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -570,5 +570,7 @@
   "your_last_input_to_contract_func": "你的最新抵押：${input}, ${task_pending}",
   "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
   "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
-  "your_last_output_to_contract_func": "你的最新提取：$input, ${task_pending}"
+  "your_last_output_to_contract_func": "你的最新提取：$input, ${task_pending}",
+  "no_pengding_node_contract_hint": "没有待启动的节点合约\n您可以创建合约",
+  "delegation_full_will_active_hint": "抵押已满，即将启动"
 }
