udpate some word

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -1,5 +1,5 @@
 {
-  "app_name": "泰坦",
+  "app_name": "泰坦地图",
   "network_request_err": "网络请求错误,状态码: $code",
   "route": "路线",
   "no_recommended_route": "暂无推荐路线",
@@ -486,7 +486,7 @@
   "wait_to_launch": "合约等待启动",
   "node_in_progress": "节点进行中",
   "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
-  "launch_success": "启动",
+  "launch_success": "启动成功",
   "node_had_stop": "节点已停止",
   "expired_can_withdraw_rewards": "已到期,可提全部奖励",
   "launch_fail_request_refund": "启动失败，请申请退款",
@@ -498,10 +498,10 @@
   "click_view_detail": "点击查看详情",
   "you_have_invested_hyn": "你已投入(HYN)",
   "expected_output_hyn": "预期产出(HYN)",
-  "create_time": "创建",
+  "create_time": "创建时间",
   "can_withdraw_fifty_reward": "可提50%奖励",
-  "expire_date": "到期",
-  "extract_time": "提取",
+  "expire_date": "期满可提",
+  "extract_time": "合约完成",
   "extracting": "提取中...",
   "exceed_the_limit": "超过限制",
   "fund_password_error": "资金密码错误",
@@ -558,7 +558,7 @@
   "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
   "get_manage_tip_hyn": "另获管理费(HYN)",
-  "out_mange_tip_hyn": "支出管理费(HYN)",
+  "out_mange_tip_hyn": "另付管理费(HYN)",
   "input_confirm_pending": "转入待确认中",
   "output_confirm_pending": "提取待确认中",
   "input_confirm_fail": "转入失败",
