--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -247,8 +247,197 @@
   "private_share_receive_address": "接收地址:${shortAddress}",
   "navigation": "導航",
   "my_location": "我的位置",
-  "setting": "設置",
-  "language": "語言",
+  "my_position": "我的位置",
+  "get_powers": "獲取算力",
+  "node_martgage": "節點抵押",
+  "available_mortgage_numbers": "可抵${number}份",
+  "commiting": "提交中",
+  "mortgage": "抵押",
+  "free_receive": "免費領取",
+  "introduce": "介紹",
+  "receive_success_hint": "領取成功",
+  "over_limit_numbers": "超過限制數量",
+  "mortgage_fail_hint": "抵押失敗",
+  "n_days_product": "${days}天產出",
+  "power_martgage": "算力抵押",
+  "product": "產品：",
+  "amount": "價格：",
+  "amount_copy_success_hint": "金額複製成功",
+  "please_mortgage": "請抵押",
+  "becharge_amount": "充值餘額",
+  "income_amount": "收益餘額",
+  "by_hyn": "使用HYN",
+  "by_mortgage": "選擇抵押方式",
+  "transfer_hyn_hint": "請務必轉入註定的HYN金額！",
+  "address_copy_success_hint": "地址複製成功",
+  "transfer_address": "轉入地址",
+  "by_hyn_transfer": "使用HYN錢包轉入",
+  "hyn_wallet_open_hint": "HYN钱包即将开放",
+  "pay_success_hint": "支付成功",
+  "over_limit_amount_hint": "已到達上限",
+  "no_transfer_info_hint": "暫未發現轉入信息，請稍後再試",
+  "out_wallet_transfer_hint": "我已使用外部錢包轉入",
+  "action_success_hint": "操作成功",
+  "pay_fail_hint": "支付失敗",
+  "transfer_exception_hint": "轉入異常",
+  "data_exception_hint": "數據異常，請重試",
+  "confirm_mortgage": "確認抵押",
+  "balance_lack": "餘額不足",
+  "click_charge": "點擊充值",
+  "available_balance_usdt": "可用餘額 ${amount} USDT",
+  "current_rate_func": "當前 ${currency} 兌換 ${quotes} 的匯率為: 1${rate}",
+  "logining": "登錄中",
+  "login": "登錄",
+  "email_label": "郵箱",
+  "email_format_error_hint": "郵箱格式有誤，請輸入正確的郵箱",
+  "please_input_email_hint": "請輸入郵箱",
+  "password_label": "密碼",
+  "password_format_error_message": "密碼各式有誤，請輸入最少6位",
+  "please_input_password_hint": "請輸入密碼",
+  "forget_password": "忘記密码",
+  "register_account": "註冊帳號",
+  "processing": "處理中",
+  "modify_success": "修改成功",
+  "reset_account_password": "重置妝戶密碼",
+  "verification_code": "驗證碼",
+  "please_input_verification_code": "請輸入6位驗證碼",
+  "get_verification_code_again": "重新獲取 ${countdownTime}",
+  "send_verification_code": "發送驗證碼",
+  "account_new_password": "帳戶新密碼",
+  "password_length_error_message": "請輸入至少6位密碼",
+  "confirm_password_label": "確認新密碼",
+  "register": "註冊",
+  "register_success": "註冊成功",
+  "register_email": "註冊郵箱",
+  "invitation_code": "邀請碼",
+  "please_input_invitation_code": "請輸入6位邀請碼",
+  "account_password": "帳戶密碼",
+  "fundz_password": "資金安全密碼",
+  "fund_password_format_error_message": "密碼格式有誤，請輸入至少6位",
+  "fund_password_length_error_message": "請輸入至少6位資金密碼",
+  "no_level": "無等級",
+  "task": "任務",
+  "my_account_with_unit": "我的帳戶(USDT)",
+  "my_power_with_unit": "我的算力(T)",
+  "node_mortgage_with_unit": "節點抵押(USDT)",
+  "get_power": "獲取算力",
+  "node_mortgage": "節點抵押",
+  "task_record": "任務紀錄",
+  "invite_share": "邀請分享",
+  "use_guide": "使用教程",
+  "dmap_setting": "DMap設置",
+  "thank_you_for_contribute_data": "感謝你恭喜數據。",
+  "safety_verify": "安全驗證",
+  "fund_password": "資金密碼",
+  "please_input_fund_pwd_hint": "請輸入資金密碼",
+  "recharge": "充值",
+  "fail_get_user_recharge_address_hint": "獲取用戶充值地址失敗",
+  "current_exchange_rate": "當前 ${to} 兌換 ${currency} 的匯率為",
+  "Tips": "提示",
+  "create": "創建",
+  "recharge_success_hint": "充值成功",
+  "transfer_warning_hint": "上述地址僅接受HYN或USDT（ERC20）資產，切勿轉入其他資產，否則無法找回！您轉入後，需要整個網路節點的確認，大約需要10-30分鐘。",
+  "task_finish_day_hint": "當天任務已完成",
+  "task_finish_func": "已做任務${total}次",
+  "time_f": "時間:",
+  "load_fail_click_hint": "加載失敗，點擊重試",
+  "the_horizon_hint": "—— 到達地平線 ——",
+  "click_retry_hint": "點擊重試",
+  "network_exception_hint": "網路異常~",
+  "star_number": "星際數",
+  "direct_star_numbers": "直連星際量",
+  "max_star_numbers": "最大星際量",
+  "other_star_numbers": "其他星際量",
+  "by_recommend": "推薦人 ${getParentEmail}",
+  "invite_link_copy_hint": "要求鏈接已複製",
+  "invite_link": "邀請鏈接",
+  "no_invite_success_hint": "你還沒成功邀請人~",
+  "invitate_qr": "邀請二維碼",
+  "invite_join": "邀請你加入",
+  "check_update": "檢查更新",
+  "contact_customer_service": "聯繫客服",
+  "already_latest_version_hint": "已經是最新版本",
+  "wx_id": "Wechat ID：titan654321",
+  "copy_wx_id_success_hint": "複製Wechat號成功",
+  "sweep_qr_hint": "掃一掃上面的二維碼圖案，加我Wechat",
+  "node_mortgage_in_out_hint": "節點抵押，隨進隨出，不限時間。",
+  "node_has_squat_hint": "節點已搶完",
+  "node_introduction": "節點介紹",
+  "cybersquatting": "搶注",
+  "stay_func": "剩餘 ${snapUpStocks}",
+  "income_func": "${incomeCycle}天收益",
+  "mortgage_product_func": "抵押產品：${name}",
+  "Insufficient_balance_hint": "可用於抵押的餘額不足",
+  "mortgage_success_hint": "抵押成功",
+  "tip_node_mortgages_balances_hint": "提示：只能使用收益餘額進行節點抵押",
+  "snap_up": "搶註",
+  "snap_up_product_fuc": "搶註產品：${name}",
+  "need_transfer": "需轉入",
+  "snap_up_success_hint": "搶註成功",
+  "snap_up_fail": "搶註失敗",
+  "confirm_snap_up": "確認搶註",
+  "tip_snap_up_balance_hint": "提示：搶註節點只能使用充值餘額進行抵押",
+  "map_ai_verificate": "地圖AI校驗",
+  "turn_on_wifi_hint": "打开WiFi扫描更精准的信号地图",
+  "all_powers_func": "总算力：${totalPower}",
+  "background_scan": "后台扫描",
+  "max_range_func": "最大范围约：${maxMeter} 米",
+  "withdrawal": "提币",
+  "balance_with_unit": "账户余额(USDT)",
+  "earnings_balance": "收益余额",
+  "recharge_balance": "充值余额",
+  "bill_flow": "账单流水",
+  "withdrawal_records": "提币记录",
+  "withdrawal_with_quantity": "提币：${count}",
+  "poundage_with_quantity": "手续费：${poundage}",
+  "max_withdrawal_quantity": "最多可提 ${maxWithdrawal} USDT",
+  "hyn_withdrawal_coin_address": "HYN提币地址",
+  "my_wallet_address": "我的钱包地址",
+  "please_input_hyn_address": "请输入HYN地址",
+  "no_eth_address": "非以太坊地址",
+  "quantity": "数量",
+  "please_input_withdrawal_quantity": "请输入提币数量",
+  "withdrawal_fee": "手续费(${fee}%)",
+  "amount_received": "HYN到账数量",
+  "withdrawal_audit_message": "将换算成相应的HYN到你的提币地址上。为保障资金安全，我们会对提币进行人工审核。提币处理时间：早10:00点-晚21:00点当天到账，非工作时间收到的订单将在第二天到账。",
+  "over_max_withdrawal": "超出最大提币额度",
+  "below_min_withdrawal": "低于最小提币额度",
+  "please_input_hyn_withdrawal_address": "请输入HYN提币地址",
+  "withdrawal_apply_success": "提币申请成功",
+  "withdrawal_fail": "提币出错",
+  "without_hyn_wallet": "你还没有钱包，请先创建或导入钱包。",
+  "my_total_power": "我的总算力",
+  "effective": "有效",
+  "finished": "已结束",
+  "my_node_mortgage": "我的节点抵押",
+  "redemption_mortgage": "赎回抵押",
+  "redemption_success": "赎回成功",
+  "redemption_fail": "赎回出错",
+  "mortgage_time": "抵押时间：${time}",
+  "mortgage_id": "抵押ID：${id}",
+  "personal_information": "个人信息",
+  "modify_account_password": "修改账户密码",
+  "modify_fund_password": "修改资金密码",
+  "login_out": "登出",
+  "reset_fund_password": "重置资金密码",
+  "please_input_account_password": "请输入账户密码",
+  "fund_new_password": "资金新密码",
+  "confirm_new_fund_password": "确认资金新密码",
+  "fund_password_not_equal_confirm_fund_password": "资金密码与确认资金密码不一致",
+  "re_enter_fund_password": "请再次输入资金密码",
+  "total_invitation_func": "已邀请${totalInvitations}人",
+  "grade": "等级",
+  "current_grade": "当前等级",
+  "no_grade": "无等级",
+  "contribute_reward_func": "贡献奖励： ${award}",
+  "grade_require_func": "等级要求： ${require}",
+  "revenue_details": "收益详情",
+  "city_recommendation": "城市推荐",
+  "search_exception": "搜索异常",
+  "ciphertext_exception_hint": "密文无效或已过期",
+  "not_valid_public_key": "不是合法的公钥",
+  "setting": "设置",
+  "language": "语言",
   "hynPriceUnit": "CNY",
   "hynPriceUnitSymbol": "¥",
   "cafe": "咖啡館",
@@ -272,7 +461,6 @@
   "please_open_wifi": "WIFI信號可以輔助三角定位，請開啟設備WIFI",
   "require_location": "申請定位授權",
   "require_location_message": "請妳授權使用定位功能.",
-  "open_location_service": "打開定位服務",
   "open_location_service_message": "定位服務已關閉，請開啟",
   "scan_name_wifi": "WiFi",
   "scan_name_cellular": "基站",
@@ -290,6 +478,40 @@
   "scan_upload_signal_success_hint": "信號數據上傳成功",
   "scan_thanks_contribution_signal_hint": "感謝您做的數據貢獻！",
   "scan_confirm_upload" : "上傳信號數據",
+    "task_interval_below_limit": "做任务间隔低于30分钟",
+  "today_complete_hint": "今天任务已完成，感谢你贡献数据",
+  "psw_reset_error_hint": "重置密码错误",
+  "username_pwd_not_match_hint": "用户名和密码不匹配",
+  "invite_code_error_hint": "邀请码错误",
+  "verify_code_error_hint": "验证码错误",
+  "update_user_info_fail_hint": "更新用户信息失败",
+  "account_exist_hint": "账号已存在，请直接登录账号",
+  "create_user_fail_hint": "创建用户失败",
+  "net_error_hint": "网络错误",
+  "no_content_hint": "无内容",
+  "content_conflict_hint": "内容冲突",
+  "insufficient_permission_hint": "权限不足",
+  "unauthorized": "未授权",
+  "para_error_hint": "参数错误",
+  "unknown_error_hint": "未知错误",
+  "fund_pwd_error_hint": "资金密码错误",
+  "over_limit_hint": "超过限制",
+  "check_in_completed": "完成",
+  "hashrate": "算力",
+  "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json",
+  "maprich_intro_url": "${rich_domain}intro?lang=zh_CN",
+  "actual_amount_received": "(以到账交易所实时价为准)",
+  "get_current_position_fail_tips": "获取不到你当前位置",
+  "open_location_service": "请授予定位服务权限",
+  "apply_location_service": "申请定位授权",
+  "allow_location_service": "请你授权使用定位功能.",
+  "again_click_exit_app": "再按一下退出程序",
+  "recharge_has_submitted": "充值已提交",
+  "please_pay_attention_arrival_of_account": "请留意账户的到账情况",
+  "please_enter_recharge_amount": "请输入充值金额",
+  "please_enter_correct_amount": "请输入正确的金额",
+  "charge_usdt_to_balance": "充等值USDT到余额",
+  "give_away": "赠送",
   "scan_collect_signal_func": "已收集到${num}個信號",
   "selected_area": "選擇地區",
   "what_region_use_titan": "妳在什麽地區使用${app}?",
@@ -352,9 +574,23 @@
   "post_my_check": "提交驗證",
   "no_category": "暫無相關類別",
   "hot_search": "熱門搜索：",
-  "add_failed_exist_hint": "該地點已存在，請添加其他地點",
-  "epidemic_map": "新冠狀肺炎疫情地圖",
-  "epidemic_map_desc": "新型冠狀肺炎疫情",
+  "task_un_finished": "任务未完成",
+  "task_completed": "任务已完成",
+  "task_finished_func": "扫描信号${scanTimes}次，添加地点${addPoiTimes}次，验证地点${verifyPoiTimes}次",
+  "task_un_finished_func": "${todayTimes}/${times}次，未完成",
+  "task_is_finished_func": "${todayTimes}/${times}次，已完成",
+  "task_to_standard": "任务达标:",
+  "task_to_standard_func": "需完成${times1}次【扫描附近信号】，${times2}次【添加附近地点】，${times3}次【验证附近地点】。多出的贡献次数不影响达标。",
+  "recharge_tips": "充值提示",
+  "this_address": "此地址",
+  "only_accept_hyn_assets": "只接受HYN资产",
+  "do_deposit_other_asset": "，请勿向此地址充值其他资产，否则将无法找回！",
+  "i_already_know": "我已知晓",
+  "withdrawal_tips": "提币提示",
+  "withdrawal_address": "提币地址",
+  "only_accept_hyn_addresses": "只接受HYN地址",
+  "do_not_provide_other_address": "，切勿提供其他资产地址，否则将无法找回！",
+  "add_failed_exist_hint": "该地点已存在，请添加其他地点",
   "ncov_guide": "防疫資訊",
   "isolation_yes": "是",
   "isolation_no": "否",
@@ -410,6 +646,45 @@
   "signal_chart_last_month_numbers_func": "最近壹個月${scanName}數據增量：",
   "signal_total_data": "信號數據總量：",
   "poi_total_data": "POI數據分布：",
+    "epidemic_map": "新型肺炎疫情地图",
+  "epidemic_map_desc": "新型肺炎疫情",
+  "buy_need_hyn_usdt_func": "(需：HYN等额 ${hyn}U + USDT直充 ${usdt}U)",
+  "balance_hyn_usdt": "可用余额 HYN等额 ${hyn}，USDT直充 ${usdt}",
+  "hyn_eq_u": "HYN等额U",
+  "usdt_direct": "USDT直充",
+  "transfer_in_hyn": "转入HYN",
+  "transfer_in_usdt": "转入USDT（ERC20）",
+  "experience_contract_mortgage": "宅经济合约抵押",
+  "select_contract_quantity": "选择合约数量",
+  "input_contract_quantity": "输入合约数量",
+  "experience_upper_func": "上限${canBuy}份",
+  "experience_avaliable_func": "可用余额 HYN等额 ${numbers}",
+  "experience_numbers_not_empty": "合约数量不能为空",
+  "purchase_title_recharge_usdt_hyn": "使用混合直充USDT+HYN余额",
+  "purchase_title_recharge_only_hyn": "使用直充HYN余额",
+  "purchase_title_recharge_func": "(我的余额 HYN等额 ${hyn}U , USDT直充 ${usdt}U)",
+  "purchase_title_input_func": "(我的余额 ${balance}U)",
+  "my_hash_free_contract": "免费合约",
+  "my_hash_gift_contract": "赠送合约",
+  "my_hash_home_economic_contract": "宅经济合约",
+  "buy_need_hyn_only_func": "(需：HYN等额 ${hyn}U)",
+  "hashrate_contract": "算力合约",
+  "purchase_title_recharge_only_usdt": "使用直充USDT余额",
+  "buy_need_usdt_only_func": "(需：USDT ${usdt}U)",
+  "quantity_func": "${number} 份",
+  "daily_bills_type_others": "其他账单",
+  "daily_bills_type_recharge": "充值账单",
+  "daily_bills_type_income": "收益账单",
+  "daily_bills_type_node": "节点账单",
+  "daily_bills_type_buycontract": "入金/复购账单",
+  "daily_bills_type_all": "总账单",
+  "contract_record": "账单",
+  "all_bills": "总账单",
+  "contract_bills": "合约账单",
+  "node_bills": "节点账单",
+  "reward_bills": "奖励账单",
+  "recharge_withdrawal_bills": "充提账单",
+  "my_account": "我的账户",
   "wait_start_node_contract": "待启动的合约",
   "earth_outpace_server_node": "全球超过%d个地球服务站点",
   "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
@@ -449,7 +724,6 @@
   "withdraw_reward": "提取奖励50%",
   "expire_end": "期满结束",
   "truely_date_accurate": "具体以实际日期为准",
-  "confirm_mortgage": "确定抵押",
   "no_enough_hyn_fail_invest_extract": "·  投入后，若在规定期限内Map3节点抵押合约不能积攒够启动所需HYN，则本次合约启动失败。投入HYN的钱包账户可提取自己投入的HYN资金。",
   "invest_cant_undo": "·  投入Map3节点后不可撤销。",
   "account_flow": "合约流水",
@@ -463,7 +737,6 @@
   "broadcase_success": "广播成功",
   "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
   "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
-  "create": "创建",
   "map_node_contract_address": "Map3节点合约(${receiverAddress})",
   "launch": "发起",
   "remain_day_has_colon": "剩余：${remain}天",
@@ -500,13 +773,11 @@
   "expected_output_hyn": "预期产出(HYN)",
   "create_time": "创建时间",
   "can_withdraw_fifty_reward": "可提50%奖励",
-  "expire_date": "到期时间",
-  "extract_time": "提取时间",
+  "extract_time": "合约完成",
   "extracting": "提取中...",
   "exceed_the_limit": "超过限制",
   "fund_password_error": "资金密码错误",
   "param_error": "参数错误",
-  "unauthorized": "未授权",
   "insufficient_permission": "权限不足",
   "content_confict": "内容冲突",
   "no_content": "无内容",
@@ -520,7 +791,7 @@
   "password_reset_error": "重置密码错误",
   "punch_card_completed_came_tomorrow": "今天打卡任务已完成，请明日再来",
   "check_interval_less_thirty_minutes": "打卡间隔低于30分钟",
-  "no_more_data": "没有更多数据了~",
+  "no_more_data": "—— 到底地平线了 ——",
   "load_failed_click_retry": "加载失败，点击重试",
   "price_show": "价格显示",
   "my_initiated_map_contract": "我发起的Map3合约",
@@ -553,12 +824,12 @@
   "withdrawRefund": "申请退款",
   "contract_had_stop": "合约已结束",
   "contract_had_expired": "合约已到期",
-  "create_contract_only_one_hint": "• 一个钱包地址同一时间内只能创建一个Map3节点合约。合约到期后可再创建一个。",
+  "create_contract_only_one_hint": "• 一个钱包有且只能创建一个Map3节点抵押合约。合约到期后可再创建一个。",
   "contract_running": "合约运行中",
   "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
-  "get_manage_tip_hyn": "获得管理费(HYN)",
-  "out_mange_tip_hyn": "支出管理费(HYN)",
+  "get_manage_tip_hyn": "另获管理费(HYN)",
+  "out_mange_tip_hyn": "另付管理费(HYN)",
   "input_confirm_pending": "转入待确认中",
   "output_confirm_pending": "提取待确认中",
   "input_confirm_fail": "转入失败",
@@ -572,5 +843,6 @@
   "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
   "your_last_output_to_contract_func": "你的最新提取：$input, ${task_pending}",
   "no_pengding_node_contract_hint": "没有待启动的节点合约\n您可以创建合约",
-  "delegation_full_will_active_hint": "抵押已满，即将启动"
+  "delegation_full_will_active_hint": "抵押已满，即将启动",
+  "expire_date": "期满可提"
 }
