--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -427,7 +427,7 @@
   "freeze_balance_reward_direct_push": "•  创建节点需要暂时冻结500U账户余额，用于支付直推人的贡献奖励。直推人及奖励收取节点总收益的5%。",
   "confirm_bug": "确认提交",
   "mortgage_hyn_num": "抵押HYN数量",
-  "mortgage_wallet_balance": "（${walletName}钱包HYN余额 $balance）",
+  "mortgage_wallet_balance": "（可用 $balance）",
   "mintotal_buy": "最低买入$minTotal",
   "mintotal_hyn": "不能少于${minTotal}HYN",
   "hyn_balance_no_enough": "HYN余额不足",
@@ -552,7 +552,7 @@
   "withdrawRefund": "申请退款",
   "contract_had_stop": "合约已结束",
   "contract_had_expired": "合约已到期",
-  "create_contract_only_one_hint": "• 一个钱包有且只能创建一个Map3节点抵押合约。合约到期后可再创建一个。",
+  "create_contract_only_one_hint": "• 一个地址同一时间只能创建一个合约。合约完成后，该地址才可创建新合约。",
   "contract_running": "合约运行中",
   "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
